--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,23 @@
+/* Tag Styling */
 body {
-  background-color: white;
+  margin: 0;
+}
+
+div {
+  background-color: #E4F9F5;
+  height: 200px;
+  width: 200px;
+}
+
+h1 {
+  margin: 0;
+}
+
+/* Class Styling */
+.middle-container {
+  background-color: blue;
+}
+
+.bottom-container {
+  background-color: red;
 }
