Added icons and images
index.html has been modified to include tags for images and favicon. The CSS formatting has been altered to include an underline to the span in "Programmer." Lastly the image files have been included so they display properly.

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,8 +5,6 @@ body {
 
 div {
   background-color: #E4F9F5;
-  height: 200px;
-  width: 200px;
 }
 
 h1 {
@@ -14,10 +12,22 @@ h1 {
 }
 
 /* Class Styling */
+.top-container {
+
+}
+
 .middle-container {
   background-color: blue;
+  height: 200px;
+  width: 200px;
 }
 
 .bottom-container {
   background-color: red;
+  height: 200px;
+  width: 200px;
+}
+
+.pro {
+  text-decoration: underline;
 }
