--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,8 @@
 /* Tag Styling */
 body {
   margin: 0;
+  text-align: center;
+  font-family: 'Merriweather', serif;
 }
 
 div {
@@ -8,26 +10,49 @@ div {
 }
 
 h1 {
-  margin: 0;
+  margin-top: 0;
+  font-family: 'Sacramento', cursive;
+}
+
+h2 {
+  font-family: 'Montserrat', sans-serif;
+}
+
+h3 {
+  font-family: 'Montserrat', sans-serif;
 }
 
 /* Class Styling */
-.top-container {
+.circle-border {
+  border-radius: 100%;
+}
 
+.top-container {
+  background-color: #E4F9F5;
+  position: relative;
+  padding-top: 100px;
 }
 
 .middle-container {
-  background-color: blue;
-  height: 200px;
-  width: 200px;
+
 }
 
 .bottom-container {
-  background-color: red;
-  height: 200px;
-  width: 200px;
+
 }
 
 .pro {
   text-decoration: underline;
+}
+
+.top-cloud {
+  position: absolute;
+  right: 300px;
+  top: 50px;
+}
+
+.bottom-cloud {
+  position: absolute;
+  left: 300px;
+  bottom: 300px;
 }
