--- a/css/styles.css
+++ b/css/styles.css
@@ -5,41 +5,106 @@ body {
   font-family: 'Merriweather', serif;
 }
 
-div {
-  background-color: #E4F9F5;
-}
+hr {
+      border-color: grey;
+      border-style: none;
+      border-top-style: dotted;
+      border-width: 7px;
+      width: 10%;
+      margin: 100px auto 100px auto;
+    }
+
+/* font-size: 16px = 100% = 1em */
 
 h1 {
-  margin-top: 0;
+  font-size: 5.625rem;
+  margin: 50px auto 0 auto;
   font-family: 'Sacramento', cursive;
+  color: #66BFBF;
 }
 
 h2 {
   font-family: 'Montserrat', sans-serif;
+  font-size: 2.5rem;
+  color: #66BFBF;
+  font-weight: normal;
 }
 
 h3 {
   font-family: 'Montserrat', sans-serif;
+  color: #11999E;
+}
+
+a {
+  color: #11999E;
 }
 
 /* Class Styling */
 .circle-border {
   border-radius: 100%;
+  width: 15%;
 }
 
 .top-container {
-  background-color: #E4F9F5;
+  background-color: #EAF6F6;
   position: relative;
   padding-top: 100px;
 }
 
 .middle-container {
-
+  padding: 80px;
 }
 
 .bottom-container {
-
+  background-color: #66BFBF;
+  padding: 20px;
+  line-height: 2;
 }
+
+.contact-me-btn {
+   background: #468787;
+   background-image: -webkit-linear-gradient(top, #468787, #66BFBF);
+   background-image: -moz-linear-gradient(top, #468787, #66BFBF);
+   background-image: -ms-linear-gradient(top, #468787, #66BFBF);
+   background-image: -o-linear-gradient(top, #468787, #66BFBF);
+   background-image: -webkit-gradient(to bottom, #468787, #66BFBF);
+   -webkit-border-radius: 10px;
+   -moz-border-radius: 10px;
+   border-radius: 10px;
+   color: #FFFFFF;
+   font-family: Open Sans;
+   font-size: 16px;
+   font-weight: normal;
+   padding: 10px;
+   border: solid #66BFBF 1px;
+   text-decoration: none;
+   display: inline-block;
+   cursor: pointer;
+   text-align: center;
+   margin: 25px;
+}
+
+.contact-me-btn:hover {
+   border: solid #468787 1px;
+   background: #376868;
+   background-image: -webkit-linear-gradient(top, #376868, #468787);
+   background-image: -moz-linear-gradient(top, #376868, #468787);
+   background-image: -ms-linear-gradient(top, #376868, #468787);
+   background-image: -o-linear-gradient(top, #376868, #468787);
+   background-image: -webkit-gradient(to bottom, #376868, #468787);
+   -webkit-border-radius: 10px;
+   -moz-border-radius: 10px;
+   border-radius: 10px;
+   text-decoration: none;
+}
+
+.skill-row {
+  margin: 100px auto 100px auto;
+  width: 50%;
+  text-align: left;
+  line-height: 2;
+}
+
 
 .pro {
   text-decoration: underline;
@@ -55,4 +120,28 @@ h3 {
   position: absolute;
   left: 300px;
   bottom: 300px;
+}
+
+.code-image {
+  width: 25%;
+  float: left;
+  margin-right: 30px;
+}
+
+.kungFu-image {
+  width: 25%;
+  float: right;
+  margin-left: 30px;
+}
+
+.my-summary {
+  color: #40514E;
+}
+
+.footer-copyright {
+  color: #EAF6F6;
+}
+
+.footer-link {
+  margin: 30px;
 }
