--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,16 @@
 /* Tag Styling */
 body {
+  color: #40514E;
   margin: 0;
   text-align: center;
   font-family: 'Merriweather', serif;
 }
 
 hr {
-      border-color: grey;
-      border-style: none;
-      border-top-style: dotted;
-      border-width: 7px;
-      width: 10%;
-      margin: 100px auto 100px auto;
+      border: dotted grey 6px;
+      border-bottom: none;
+      width: 4%;
+      margin: 100px auto;
     }
 
 /* font-size: 16px = 100% = 1em */
@@ -28,6 +27,7 @@ h2 {
   font-size: 2.5rem;
   color: #66BFBF;
   font-weight: normal;
+  padding-bottom: 10px;
 }
 
 h3 {
@@ -35,8 +35,19 @@ h3 {
   color: #11999E;
 }
 
+p {
+  line-height: 2;
+}
+
 a {
   color: #11999E;
+  font-family: 'Montserrat', sans-serif;
+  margin: 10px 20px;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #EAF6F6;
 }
 
 /* Class Styling */
@@ -52,57 +63,45 @@ a {
 }
 
 .middle-container {
-  padding: 80px;
+  margin: 100px 0;
 }
 
 .bottom-container {
   background-color: #66BFBF;
-  padding: 20px;
-  line-height: 2;
+  padding: 50px 0 20px;
 }
 
-.contact-me-btn {
-   background: #468787;
-   background-image: -webkit-linear-gradient(top, #468787, #66BFBF);
-   background-image: -moz-linear-gradient(top, #468787, #66BFBF);
-   background-image: -ms-linear-gradient(top, #468787, #66BFBF);
-   background-image: -o-linear-gradient(top, #468787, #66BFBF);
-   background-image: -webkit-gradient(to bottom, #468787, #66BFBF);
-   -webkit-border-radius: 10px;
-   -moz-border-radius: 10px;
-   border-radius: 10px;
-   color: #FFFFFF;
-   font-family: Open Sans;
-   font-size: 16px;
-   font-weight: normal;
-   padding: 10px;
-   border: solid #66BFBF 1px;
-   text-decoration: none;
-   display: inline-block;
-   cursor: pointer;
-   text-align: center;
-   margin: 25px;
+.btn {
+  background: #11CDD4;
+  background-image: -webkit-linear-gradient(top, #11CDD4, #11999E);
+  background-image: -moz-linear-gradient(top, #11CDD4, #11999E);
+  background-image: -ms-linear-gradient(top, #11CDD4, #11999E);
+  background-image: -o-linear-gradient(top, #11CDD4, #11999E);
+  background-image: linear-gradient(to bottom, #11CDD4, #11999E);
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
+  font-family: 'Montserrat', sans-serif;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
 }
 
-.contact-me-btn:hover {
-   border: solid #468787 1px;
-   background: #376868;
-   background-image: -webkit-linear-gradient(top, #376868, #468787);
-   background-image: -moz-linear-gradient(top, #376868, #468787);
-   background-image: -ms-linear-gradient(top, #376868, #468787);
-   background-image: -o-linear-gradient(top, #376868, #468787);
-   background-image: -webkit-gradient(to bottom, #376868, #468787);
-   -webkit-border-radius: 10px;
-   -moz-border-radius: 10px;
-   border-radius: 10px;
-   text-decoration: none;
+.btn:hover {
+  background: #30E3CB;
+  background-image: -webkit-linear-gradient(top, #30E3CB, #2BC4AD);
+  background-image: -moz-linear-gradient(top, #30E3CB, #2BC4AD);
+  background-image: -ms-linear-gradient(top, #30E3CB, #2BC4AD);
+  background-image: -o-linear-gradient(top, #30E3CB, #2BC4AD);
+  background-image: linear-gradient(to bottom, #30E3CB, #2BC4AD);
+  text-decoration: none;
 }
 
 .skill-row {
   margin: 100px auto 100px auto;
   width: 50%;
   text-align: left;
-  line-height: 2;
 }
 
 
@@ -113,12 +112,12 @@ a {
 .top-cloud {
   position: absolute;
   right: 300px;
-  top: 50px;
+  top: 40px;
 }
 
 .bottom-cloud {
   position: absolute;
-  left: 300px;
+  left: 250px;
   bottom: 300px;
 }
 
@@ -135,13 +134,17 @@ a {
 }
 
 .my-summary {
-  color: #40514E;
+  width: 30%;
+  margin: auto;
+}
+
+.contact-message {
+  width: 40%;
+  margin: 40px auto 60px;
 }
 
 .footer-copyright {
   color: #EAF6F6;
-}
-
-.footer-link {
-  margin: 30px;
+  font-size: 0.75rem;
+  padding: 20px 0;
 }
